# hotel

./: .gitignore  0  1  CMakeLists.txt  README.md  compilar_projeto.c  compiler.c  main.c
DATABASE/: .1515841051
FATURAS/: 1812011102.txt  1812011112.txt  1812011118.txt  1812011119.txt  1812031900.txt  1812031938.txt  1812031944.txt  1812031951.txt  1812032028.txt  1812032030.txt  1812032034.txt  1812032039.txt  1812032041.txt  1812032042.txt  1812032045.txt  1812032048.txt  1812061229.txt  1812061230.txt  1812061235.txt  1812061304.txt  1812061308.txt  1812061336.txt  181206141940.txt  181206142529.txt  181206143635.txt  181206144053.txt  info.txt
LIB/: base.c  base.h  cfg.c  cfg.h  data.c  datas.c  datas.h  elements.h  fatura.c  fatura.h  files.c  files.h  globals.h  guest.c  guest.h  hotel.c  hotel.h  includes.h  log.c  log.h  rooms.c  rooms.h  search.c  search.h  services.c  services.h  sis.c  sis.h  texts.c  texts.h
LOG/: LOG_USERS.TXT  info.txt
db/: hotel.db
libs/: arraylist.c  arraylist.h  browserdb.c  browserdb.h  database.c  database.h  datas.c  datas.h  extrafuncs.c  extrafuncs.h  login.c  login.h  reservas.c  reservas.h  services.c  services.h  tipos.h
libs/elementos_hotel/: clientes.c  clientes.h  quartos.c  quartos.h  reservas.c  reservas.h  servicos.c  servicos.h
src/: CMakeLists.txt  main.c
src/libs/: browserdb.h  database.c  database.h  datas.c  datas.h  extrafuncs.c  extrafuncs.h  home.c  home.h  login.c  login.h
src/libs/elementos_hotel/: clientes.c  quartos.c  quartos.h  reservas.c  reservas.h  servicos.c
